[package]
name = "axum-stack-overflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htmlчуть ужало)

[dependencies]
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
axum = "0.6.20"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"] }
dotenvy = "0.15.7"
lo = "0.0.1"
pretty_env_logger = "0.5.0"
thiserror = "1.0"
log = "0.4.20"
async-trait = "0.1.77"